task-resources/upg-loadme-manifests/upg-loadme-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: upg-loadme-external
  namespace: demo
  annotations: # Reference for complete list of annotations: https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.2/guide/ingress/annotations/
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/tags: CreatedBy=testUser
    # alb.ingress.kubernetes.io/subnets: subnet-056XXXXXXXXX, subnet-006XXXXXXXXX # mention public subnets only if subnets not tagged for autodiscovery
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: upg-loadme
              port:
                number: 80

---
#checkout selectors & https://eskala.io/tutorial/the-node-js-developers-guide-to-kubernetes-part-ii/
apiVersion: v1
kind: Service
metadata:
  name: ingress
spec:
  selector:
    app: MyApp
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
